# advent_code_2022

./: LICENSE  README.md
Day_1_Calories_Counting/: dune-project
Day_1_Calories_Counting/lib/: dune
Day_1_Calories_Counting/test/: dune
Day_2_Rock_Papers_Scissors/: dune-project
Day_2_Rock_Papers_Scissors/lib/: dune
Day_2_Rock_Papers_Scissors/test/: dune
Day_3_Rucksack_Reorganization/: dune-project
Day_3_Rucksack_Reorganization/lib/: dune
Day_3_Rucksack_Reorganization/test/: dune
Day_4_Camp_Cleanup/: dune-project
Day_4_Camp_Cleanup/lib/: dune
Day_4_Camp_Cleanup/test/: dune
